--- a/15.1.md
+++ b/15.1.md
@@ -29,6 +29,60 @@ Resource Terraform для Yandex Cloud:
 - [Route table](https://registry.terraform.io/providers/yandex-cloud/yandex/latest/docs/resources/vpc_route_table).
 - [Compute Instance](https://registry.terraform.io/providers/yandex-cloud/yandex/latest/docs/resources/compute_instance).
 
+```bash
+yandex_vpc_network.my-vpc: Creating...
+yandex_compute_image.ubuntu-1804-lts: Creating...
+yandex_vpc_network.my-vpc: Creation complete after 2s [id=enpcbfv6816n1gmd0kr3]
+yandex_vpc_subnet.public: Creating...
+yandex_vpc_security_group.nat-instance-sg: Creating...
+yandex_vpc_subnet.public: Creation complete after 0s [id=e9bep7r4lvmf2f9k6cku]
+yandex_vpc_security_group.nat-instance-sg: Creation complete after 1s [id=enpgecbb4o8678ehu5fd]
+yandex_compute_instance.nat-instance: Creating...
+yandex_compute_image.ubuntu-1804-lts: Still creating... [10s elapsed]
+yandex_compute_image.ubuntu-1804-lts: Creation complete after 13s [id=fd8l78ce17isumas3v0s]
+yandex_compute_instance.nat-instance: Still creating... [10s elapsed]
+yandex_compute_instance.nat-instance: Still creating... [20s elapsed]
+yandex_compute_instance.nat-instance: Still creating... [30s elapsed]
+yandex_compute_instance.nat-instance: Still creating... [40s elapsed]
+yandex_compute_instance.nat-instance: Still creating... [50s elapsed]
+yandex_compute_instance.nat-instance: Still creating... [1m0s elapsed]
+yandex_compute_instance.nat-instance: Creation complete after 1m4s [id=fhmvbt0rq5mpsmqt708d]
+yandex_vpc_route_table.nat-instance-route: Creating...
+yandex_vpc_route_table.nat-instance-route: Creation complete after 1s [id=enpo6s29n7hae79qovhi]
+yandex_vpc_subnet.private: Creating...
+yandex_vpc_subnet.private: Creation complete after 0s [id=e9bps6jfbavuj2q6dngh]
+yandex_compute_instance.test-vm: Creating...
+yandex_compute_instance.test-vm: Still creating... [10s elapsed]
+yandex_compute_instance.test-vm: Still creating... [21s elapsed]
+yandex_compute_instance.test-vm: Still creating... [31s elapsed]
+yandex_compute_instance.test-vm: Still creating... [41s elapsed]
+yandex_compute_instance.test-vm: Still creating... [51s elapsed]
+yandex_compute_instance.test-vm: Still creating... [1m1s elapsed]
+yandex_compute_instance.test-vm: Creation complete after 1m4s [id=fhmf1hmqfti6c496gh39]
+
+Apply complete! Resources: 8 added, 0 changed, 0 destroyed.
+
+Outputs:
+
+external_ip_address_nat_instance = "89.169.140.8"
+
+alex@kube:/mnt/cloud-netology/clopro-homeworks/15.1/nat-instance-tf$ ssh -i /home/alex/.ssh/id_rsa_cloud alexnat@89.169.140.8
+Welcome to Ubuntu 18.04.1 LTS (GNU/Linux 4.15.0-29-generic x86_64)
+
+ * Documentation:  https://help.ubuntu.com
+ * Management:     https://landscape.canonical.com
+ * Support:        https://ubuntu.com/advantage
+
+
+
+#################################################################
+This instance runs Yandex.Cloud Marketplace product
+Please wait while we configure your product...
+
+Documentation for Yandex Cloud Marketplace images available at https://cloud.yandex.ru/docs
+#################################################################
+```
+
 ---
 ### Задание 2. AWS* (задание со звёздочкой)
 
