--- a/15.1.md
+++ b/15.1.md
@@ -23,6 +23,8 @@
  - Создать route table. Добавить статический маршрут, направляющий весь исходящий трафик private сети в NAT-инстанс.
  - Создать в этой приватной подсети виртуалку с внутренним IP, подключиться к ней через виртуалку, созданную ранее, и убедиться, что есть доступ к интернету.
 
+> Ссылка на [манифесты](https://github.com/AlexeyD3/clopro-homeworks/tree/main/15.1/nat-instance-tf)
+
 Resource Terraform для Yandex Cloud:
 
 - [VPC subnet](https://registry.terraform.io/providers/yandex-cloud/yandex/latest/docs/resources/vpc_subnet).
