--- a/15.2.md
+++ b/15.2.md
@@ -17,40 +17,6 @@
  - Создать бакет в Object Storage с произвольным именем (например, _имя_студента_дата_).
  - Положить в бакет файл с картинкой.
  - Сделать файл доступным из интернета.
- 
-2. Создать группу ВМ в public подсети фиксированного размера с шаблоном LAMP и веб-страницей, содержащей ссылку на картинку из бакета:
-
- - Создать Instance Group с тремя ВМ и шаблоном LAMP. Для LAMP рекомендуется использовать `image_id = fd827b91d99psvq5fjit`.
- - Для создания стартовой веб-страницы рекомендуется использовать раздел `user_data` в [meta_data](https://cloud.yandex.ru/docs/compute/concepts/vm-metadata).
- - Разместить в стартовой веб-странице шаблонной ВМ ссылку на картинку из бакета.
- - Настроить проверку состояния ВМ.
- 
-3. Подключить группу к сетевому балансировщику:
-
- - Создать сетевой балансировщик.
- - Проверить работоспособность, удалив одну или несколько ВМ.
-4. (дополнительно)* Создать Application Load Balancer с использованием Instance group и проверкой состояния.
-
-Полезные документы:
-
-- [Compute instance group](https://registry.terraform.io/providers/yandex-cloud/yandex/latest/docs/resources/compute_instance_group).
-- [Network Load Balancer](https://registry.terraform.io/providers/yandex-cloud/yandex/latest/docs/resources/lb_network_load_balancer).
-- [Группа ВМ с сетевым балансировщиком](https://cloud.yandex.ru/docs/compute/operations/instance-groups/create-with-balancer).
-
----
-## Задание 2*. AWS (задание со звёздочкой)
-
-Это необязательное задание. Его выполнение не влияет на получение зачёта по домашней работе.
-
-**Что нужно сделать**
-
-Используя конфигурации, выполненные в домашнем задании из предыдущего занятия, добавить к Production like сети Autoscaling group из трёх EC2-инстансов с  автоматической установкой веб-сервера в private домен.
-
-1. Создать бакет S3 и разместить в нём файл с картинкой:
-
- - Создать бакет в S3 с произвольным именем (например, _имя_студента_дата_).
- - Положить в бакет файл с картинкой.
- - Сделать доступным из интернета.
 
 ```tf
 // Декларируем переменные
@@ -159,6 +125,90 @@ cat                                                         100%[===============
 
 2024-08-06 23:21:54 (8,12 MB/s) - ‘cat’ saved [149321/149321]
 ```
+
+2. Создать группу ВМ в public подсети фиксированного размера с шаблоном LAMP и веб-страницей, содержащей ссылку на картинку из бакета:
+
+ - Создать Instance Group с тремя ВМ и шаблоном LAMP. Для LAMP рекомендуется использовать `image_id = fd827b91d99psvq5fjit`.
+ - Для создания стартовой веб-страницы рекомендуется использовать раздел `user_data` в [meta_data](https://cloud.yandex.ru/docs/compute/concepts/vm-metadata).
+ - Разместить в стартовой веб-странице шаблонной ВМ ссылку на картинку из бакета.
+ - Настроить проверку состояния ВМ.
+ 
+3. Подключить группу к сетевому балансировщику:
+
+ - Создать сетевой балансировщик.
+ - Проверить работоспособность, удалив одну или несколько ВМ.
+4. (дополнительно)* Создать Application Load Balancer с использованием Instance group и проверкой состояния.
+
+```bash
+Apply complete! Resources: 16 added, 0 changed, 0 destroyed.
+
+Outputs:
+
+Application_Load_Balancer_Address = tolist([
+  tolist([
+    {
+      "address" = "51.250.40.193"
+    },
+  ]),
+])
+Network_Load_Balancer_Address = tolist([
+  "51.250.33.109",
+])
+all_vms = [
+  {
+    "ip_external" = "51.250.8.225"
+    "ip_internal" = "10.0.1.15"
+    "name" = "cl11gtt9fqt1ecac07o7-ovoc"
+  },
+  {
+    "ip_external" = "89.169.130.249"
+    "ip_internal" = "10.0.1.10"
+    "name" = "cl11gtt9fqt1ecac07o7-ykej"
+  },
+  {
+    "ip_external" = "84.201.159.77"
+    "ip_internal" = "10.0.1.4"
+    "name" = "cl11gtt9fqt1ecac07o7-icur"
+  },
+]
+gif_url = "https://dubrovin-08-08-2024.storage.yandexcloud.net/cat.gif"
+alex@kube:/mnt/cloud-netology/clopro-homeworks/15.2/15.2-tf$
+```
+> Узнаём внешний адрес балансёра
+```bash
+alex@kube:/mnt/cloud-netology/clopro-homeworks/15.2/15.2-tf$ yc load-balancer  network-load-balancer get --name lamp-balancer | grep address
+    address: 51.250.33.109
+```
+> Открываем сайт по 
+![cat](/15.2/15.2-tf/site.gif)
+
+> Удалил через кончоль yc две ВМ, проверил, работает
+```bash
+alex@kube:/mnt/cloud-netology/clopro-homeworks/15.2/15.2-tf$ curl 51.250.33.109
+<html><head><title>Funny-cat</title></head> <body><h1>Tap-Tap</h1><img src="http://dubrovin-08-08-2024.storage.yandexcloud.net/cat.gif"/></body></html>
+```
+
+>> Все манифесты доступны по [ссылке](https://github.com/AlexeyD3/clopro-homeworks/tree/main/15.2/tf)
+Полезные документы:
+
+- [Compute instance group](https://registry.terraform.io/providers/yandex-cloud/yandex/latest/docs/resources/compute_instance_group).
+- [Network Load Balancer](https://registry.terraform.io/providers/yandex-cloud/yandex/latest/docs/resources/lb_network_load_balancer).
+- [Группа ВМ с сетевым балансировщиком](https://cloud.yandex.ru/docs/compute/operations/instance-groups/create-with-balancer).
+
+---
+## Задание 2*. AWS (задание со звёздочкой)
+
+Это необязательное задание. Его выполнение не влияет на получение зачёта по домашней работе.
+
+**Что нужно сделать**
+
+Используя конфигурации, выполненные в домашнем задании из предыдущего занятия, добавить к Production like сети Autoscaling group из трёх EC2-инстансов с  автоматической установкой веб-сервера в private домен.
+
+1. Создать бакет S3 и разместить в нём файл с картинкой:
+
+ - Создать бакет в S3 с произвольным именем (например, _имя_студента_дата_).
+ - Положить в бакет файл с картинкой.
+ - Сделать доступным из интернета.
 1. Сделать Launch configurations с использованием bootstrap-скрипта с созданием веб-страницы, на которой будет ссылка на картинку в S3. 
 2. Загрузить три ЕС2-инстанса и настроить LB с помощью Autoscaling Group.
 
