--- a/15.2.md
+++ b/15.2.md
@@ -182,13 +182,16 @@ alex@kube:/mnt/cloud-netology/clopro-homeworks/15.2/15.2-tf$ yc load-balancer  n
 > Открываем сайт по 
 ![cat](/15.2/15.2-tf/site.gif)
 
-> Удалил через кончоль yc две ВМ, проверил, работает
+> Удалил через консоль yc две ВМ, проверил, работает
 ```bash
 alex@kube:/mnt/cloud-netology/clopro-homeworks/15.2/15.2-tf$ curl 51.250.33.109
 <html><head><title>Funny-cat</title></head> <body><h1>Tap-Tap</h1><img src="http://dubrovin-08-08-2024.storage.yandexcloud.net/cat.gif"/></body></html>
 ```
 
 >> Все манифесты доступны по [ссылке](https://github.com/AlexeyD3/clopro-homeworks/tree/main/15.2/tf)
+
+
+
 Полезные документы:
 
 - [Compute instance group](https://registry.terraform.io/providers/yandex-cloud/yandex/latest/docs/resources/compute_instance_group).
