--- a/15.3.md
+++ b/15.3.md
@@ -8,12 +8,74 @@
 1. С помощью ключа в KMS необходимо зашифровать содержимое бакета:
 
  - создать ключ в KMS;
+```yml
+# Создаём симметричный ключ шифрования
+resource "yandex_kms_symmetric_key" "secret-key" {
+  name              = "key-1"
+  description       = "ключ для шифрования s3-бакета"
+  default_algorithm = "AES_128"
+  rotation_period   = "24h"
+}
+```
+
+```yml
+# Назначение роли сервисному аккаунту для службы KMS
+resource "yandex_resourcemanager_folder_iam_member" "sa-editor-encrypter-decrypter" {
+  folder_id = var.folder_id
+  role      = "kms.keys.encrypterDecrypter"
+  member    = "serviceAccount:${yandex_iam_service_account.service-s3.id}"
+  depends_on = [yandex_iam_service_account.service-s3]
+}
+```
+
  - с помощью ключа зашифровать содержимое бакета, созданного ранее.
-2. (Выполняется не в Terraform)* Создать статический сайт в Object Storage c собственным публичным адресом и сделать доступным по HTTPS:
+```yaml
+# Создание бакета с использованием ключа доступа и шифрования шифрования
+resource "yandex_storage_bucket" "dubrovin" {
+  access_key = yandex_iam_service_account_static_access_key.sa-static-key.access_key
+  secret_key = yandex_iam_service_account_static_access_key.sa-static-key.secret_key
+  bucket = local.bucket_name
+  acl    = "public-read"
+  server_side_encryption_configuration {
+    rule {
+      apply_server_side_encryption_by_default {
+        kms_master_key_id = yandex_kms_symmetric_key.secret-key.id
+        sse_algorithm     = "aws:kms"
+      }
+    }
+  }
+}
+```
+> Получаем ссылку на изображение
+![cat](15.3/image/outputs.png)
+
+> Проверяем, что файл зашифрован
+![kms](15.3/image/crypto.png)
+
+1. (Выполняется не в Terraform)* Создать статический сайт в Object Storage c собственным публичным адресом и сделать доступным по HTTPS:
+
+> Переходим по полученной ссылке
+![s3](15.3/image/outputs.png)
+> Доступа к файлу нет
+![s3](15.3/image/https-s3.png)
+
 
  - создать сертификат;
  - создать статическую страницу в Object Storage и применить сертификат HTTPS;
+> Делаю настройки DNS  
+[dns]](15.3/image/dns.png)  
+
+
+> Применяю выпущенный сертификат  
+![https](15.3/image/https.png)  
+
+> Создаю страничку в s3  
+![s3](15.3/image/index.png)  
+
+
  - в качестве результата предоставить скриншот на страницу с сертификатом в заголовке (замочек).
+> Финальный результат
+![final](15.3/image/final.png)
 
 Полезные документы:
 
