--- a/15.1.md
+++ b/15.1.md
@@ -23,7 +23,7 @@
  - Создать route table. Добавить статический маршрут, направляющий весь исходящий трафик private сети в NAT-инстанс.
  - Создать в этой приватной подсети виртуалку с внутренним IP, подключиться к ней через виртуалку, созданную ранее, и убедиться, что есть доступ к интернету.
 
-> Ссылка на [манифесты](https://github.com/AlexeyD3/clopro-homeworks/tree/main/15.1/nat-instance-tf)
+> Ссылка на [манифесты](https://github.com/caevert/clopro-homeworks/tree/main/15.1/nat-instance-tf)
 
 Resource Terraform для Yandex Cloud:
 
@@ -42,7 +42,7 @@ internal_ip_address_test_vm = "192.168.20.17"
 ```
 > Проверяем, что из ВМ в приватный сети есть доступ в интернет, через NAT-инстанс
 ```bash
-alex@kube:/mnt/cloud-netology/clopro-homeworks/15.1/nat-instance-tf$ ssh -J alexnat@51.250.88.255 alex@192.168.20.17
+caevert@kube:/mnt/cloud-netology/clopro-homeworks/15.1/nat-instance-tf$ ssh -J caevertnat@51.250.88.255 caevert@192.168.20.17
 The authenticity of host '51.250.88.255 (51.250.88.255)' can't be established.
 ED25519 key fingerprint is SHA256:LsWgfRlcMpeXaciURFXmr5hGZyEh5AsyXdbCpmOcd18.
 This key is not known by any other names
@@ -69,7 +69,7 @@ applicable law.
 To run a command as administrator (user "root"), use "sudo <command>".
 See "man sudo_root" for details.
 
-alex@fhmcvecoocjqssbeqbqc:~$ curl ifconfig.co
+caevert@fhmcvecoocjqssbeqbqc:~$ curl ifconfig.co
 51.250.88.255
 ```
 
