--- a/15.2.md
+++ b/15.2.md
@@ -186,10 +186,10 @@ caevert@kube:/mnt/cloud-netology/clopro-homeworks/15.2/15.2-tf$ yc load-balancer
 > Удалил через консоль yc две ВМ, проверил, работает
 ```bash
 caevert@kube:/mnt/cloud-netology/clopro-homeworks/15.2/15.2-tf$ curl 51.250.33.109
-<html><head><title>Funny-cat</title></head> <body><h1>Tap-Tap</h1><img src="http://dubrovin-08-08-2024.storage.yandexcloud.net/cat.gif"/></body></html>
+<html><head><title>Funny-cat</title></head> <body><h1>Tap-Tap</h1><img src="http://zhandarov-10-09-2024.storage.yandexcloud.net/cat.gif"/></body></html>
 ```
 
->> Все манифесты доступны по [ссылке]([https://github.com/caevert/clopro-homeworks/tree/main/15.2])
+>> Все манифесты доступны по [ссылке](https://github.com/caevert/clopro-homeworks/tree/main/15.2)
 
 
 
