--- a/15.2.md
+++ b/15.2.md
@@ -172,7 +172,7 @@ all_vms = [
     "name" = "cl11gtt9fqt1ecac07o7-icur"
   },
 ]
-gif_url = "https://dubrovin-08-08-2024.storage.yandexcloud.net/cat.gif"
+gif_url = "https://zhandarov-10-09-2024.storage.yandexcloud.net/cat.gif"
 caevert@kube:/mnt/cloud-netology/clopro-homeworks/15.2/15.2-tf$
 ```
 > Узнаём внешний адрес балансёра
