--- a/15.3.md
+++ b/15.3.md
@@ -54,16 +54,10 @@ resource "yandex_storage_bucket" "dubrovin" {
 
 1. (Выполняется не в Terraform)* Создать статический сайт в Object Storage c собственным публичным адресом и сделать доступным по HTTPS:
 
-> Переходим по полученной ссылке
-![s3](15.3/image/outputs.png)
-> Доступа к файлу нет
-![s3](15.3/image/https-s3.png)
-
-
  - создать сертификат;
  - создать статическую страницу в Object Storage и применить сертификат HTTPS;
 > Делаю настройки DNS  
-[dns]](15.3/image/dns.png)  
+![dns]](15.3/image/dns.png)  
 
 
 > Применяю выпущенный сертификат  
