--- a/15.3.md
+++ b/15.3.md
@@ -57,7 +57,7 @@ resource "yandex_storage_bucket" "dubrovin" {
  - создать сертификат;
  - создать статическую страницу в Object Storage и применить сертификат HTTPS;
 > Делаю настройки DNS  
-![dns]](15.3/image/dns.png)  
+![dns](15.3/image/dns.png)  
 
 
 > Применяю выпущенный сертификат  
