--- a/15.3.md
+++ b/15.3.md
@@ -4,7 +4,7 @@
 
 ---
 ## Задание 1. Yandex Cloud   
-Код [terraform](./15.3/)
+Код [terraform](./15.3/tf/)
 1. С помощью ключа в KMS необходимо зашифровать содержимое бакета:
 
  - создать ключ в KMS;
